# encoder-decoder

./: README.md  dev.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup-vm.sh
encoder_decoder/: timer.py
encoder_decoder/decoder/: decoder.py
img_to_text/: domain.py  encoder.py  model.py  timer.py
img_to_text/decoder/: decoder.py  text_decoder.py
