[tool.poetry]
name = "encoder-decoder"
version = "0.1.0"
description = ""
authors = ["Alita Moore <alita.moore805@gmail.com>"]
readme = "README.md"
packages = [{include = "encoder_decoder"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
psutil = "^5.9.7"
timm = "^1.0.8"
transformers = "^4.44.2"
torch = {version = "^2.5.0.dev20240829+cu124", allow-prereleases = true, source = "pytorch-gpu-src"}
torchvision = {version = "^0.20.0.dev20240829+cu124", allow-prereleases = true, source = "pytorch-gpu-src"}
torchaudio = {version = "^2.5.0.dev20240829+cu124", allow-prereleases = true, source = "pytorch-gpu-src"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/nightly/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
