[tool.poetry]
name = "encoder-decoder"
version = "0.1.0"
description = ""
authors = ["Alita Moore <alita.moore805@gmail.com>"]
readme = "README.md"
packages = [{include = "img_to_text"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
psutil = "^5.9.7"
timm = "^1.0.8"
transformers = "^4.44.2"
pydantic = "^2.8.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
ipykernel = "^6.29.5"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/nightly/cu124"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
