[tool.poetry]
name = "encoder-decoder"
version = "0.1.0"
description = ""
authors = ["Alita Moore <alita.moore805@gmail.com>"]
readme = "README.md"
packages = [{include = "img_to_text"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
psutil = "^5.9.7"
timm = "^1.0.8"
transformers = "^4.44.2"
pydantic = "^2.8.2"
ipykernel = "^6.29.5"
torch = {version = "^2.4.0+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.19.0+cu124", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.4.0+cu124", source = "pytorch-gpu-src"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
